--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,10 +13,23 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
+        <TextView
+            android:id="@+id/uploadedImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Uploaded Image"
+            android:visibility="gone"
+            />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="200dp" />
+        <TextView
+            android:id="@+id/imageSize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""/>
 
         <Button
             android:id="@+id/upload"
@@ -28,25 +39,35 @@
             android:text="Upload Image"
             android:textAlignment="center"
             android:visibility="visible" />
-
+        <TextView
+            android:paddingTop="10dp"
+            android:id="@+id/compressedImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Compressed Image"
+            android:visibility="gone"
+            />
         <ImageView
+            android:paddingTop="10dp"
+
             android:id="@+id/compressImageView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="200dp" />
 
         <Button
+            android:paddingTop="10dp"
+
             android:id="@+id/downloadManage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="Download Manager" />
+            android:text="Download Manager"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/compressBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingTop="10dp"
             android:text="Compress Image"
             android:visibility="gone" />
 
