--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="10dp"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:paddingHorizontal="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,75 +17,87 @@
 
 
         <ImageView
-            android:layout_marginVertical="20dp"
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:layout_marginVertical="20dp"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/uploadedImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Uploaded Image"
-            android:visibility="gone"
-            />
-
-        <Button
-            android:id="@+id/upload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Upload Image"
-            android:textAlignment="center"
-            android:visibility="visible" />
+            android:visibility="gone" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:id="@+id/bgUploadImage"
+            android:background="@drawable/customborder">
 
 
+            <Button
+                android:id="@+id/upload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upload Image"
+                android:layout_gravity="center"
+
+                android:textAlignment="center"
+                android:textColor="@color/button_text_color"
+                android:visibility="visible" />
+
+        </FrameLayout>
         <ImageView
-            android:layout_marginVertical="20dp"
             android:id="@+id/compressImageView"
             android:layout_width="wrap_content"
-            android:textAlignment="center"
             android:layout_height="200dp"
-            android:visibility="gone"/>
+            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/compressedImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:text=""
-            android:visibility="gone"
-            />
-        <Button
-            android:layout_marginVertical="20dp"
+            android:textAlignment="center"
+            android:visibility="gone" />
 
+        <Button
             android:id="@+id/compressBtn"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginVertical="20dp"
             android:text="Compress Image"
             android:visibility="gone" />
 
         <Button
-            android:layout_marginTop="20dp"
             android:id="@+id/downloadManage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Download Manager"
             android:visibility="gone" />
 
         <Button
-            android:layout_marginVertical="10dp"
-
             android:id="@+id/fileLocation"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:text="Move To Gallery"/>
-        <Button
             android:layout_marginVertical="10dp"
+            android:text="Move To Gallery"
+            android:visibility="gone" />
+
+        <Button
             android:id="@+id/ReUpload"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
             android:text="ReUpload"
-            android:visibility="gone"
-            android:layout_height="wrap_content"/>
+            android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
