--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +17,7 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginVertical="20dp"
             android:visibility="gone" />
@@ -27,13 +26,29 @@
             android:id="@+id/uploadedImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Uploaded Image"
+            android:text=""
             android:visibility="gone" />
+        <SeekBar
+            android:id="@+id/qualityRange"
+            android:thumbTint="@color/primary_color"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:progress="50" />
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/textViewProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/quality_input"
+            android:layout_gravity="center_horizontal" />
+
         <FrameLayout
+            android:id="@+id/bgUploadImage"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:id="@+id/bgUploadImage"
             android:background="@drawable/customborder">
 
 
@@ -41,17 +56,18 @@
                 android:id="@+id/upload"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Upload Image"
                 android:layout_gravity="center"
+                android:text="@string/upload_image"
 
                 android:textAlignment="center"
                 android:textColor="@color/button_text_color"
                 android:visibility="visible" />
 
         </FrameLayout>
+
         <ImageView
             android:id="@+id/compressImageView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginVertical="20dp"
             android:textAlignment="center"
@@ -67,20 +83,19 @@
 
         <Button
             android:id="@+id/compressBtn"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginVertical="20dp"
-            android:text="Compress Image"
+            android:layout_marginTop="20dp"
+            android:text="@string/compress_image"
             android:visibility="gone" />
 
         <Button
             android:id="@+id/downloadManage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Download Manager"
+            android:layout_marginTop="10dp"
+            android:text="@string/save_image"
             android:visibility="gone" />
 
         <Button
@@ -88,16 +103,17 @@
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            android:text="Move To Gallery"
+            android:layout_marginTop="10dp"
+            android:text="@string/share_image"
             android:visibility="gone" />
 
         <Button
             android:id="@+id/ReUpload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            android:text="ReUpload"
-            android:visibility="gone" />
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            android:text="@string/upload_image"
+             />
     </LinearLayout>
 </ScrollView>
