--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+
+        android:backgroundTint="@color/white"
         app:headerLayout="@layout/header_layout"
         app:menu="@menu/navigation_item" />
 
